2013-06-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.26 released.

        * Fixed typo error in one of documentation examples.


2013-03-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.25 released.

        * Added warning and hint when fa_defs.pm cannot be read.


2012-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.24 released.

        * Happy New Year!

	* Use --login Id from FullAuto when running with
          FullAuto


2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.23 released.

        * 2.22 didn't have the updated Menus.pm.


2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.22 released.

        * Fixed editing for FullAuto so the files open
          even when syntax errors are present.


2012-11-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.21 released.

        * Improved BerkeleyDB loading for FullAuto.


2012-11-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.20 released.

        * Added cache pass-through for FullAuto.


2012-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.19 released.

        * Added new BerkeleyDB variable to import list
          (needed for FullAuto).


2012-10-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.18 released.

        * Fixed some install issues when bunlded with FullAuto.


2012-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.17 released.

        * Added "help" and "admin" menus to all FullAuto menus.


2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.16 released.

        * Fixed username lookup when using FullAuto with TeamSite.


2012-04-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.15 released.
