@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d3747d7c4d6c050b47e6704b023aff8cb521de3c ChangeLog
+SHA1 f966ec2b1e3129d46fa515af82c15094e05d24c1 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 badb68737013a80b877ca0bf8ca49677bfe7d7ce META.yml
+SHA1 b2c1afef4d47cc014874752fa7d7d6b9f92a33de META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
-SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
+SHA1 48fff7ff47f6dc693869bcbffe006873b04fa66a README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
 SHA1 ca13d9875e1249f6e84f7070be8152c34837955e inc/Module/Install/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 d25de72224fed1e1ea87550aec7d712ff118966f lib/Term/Menus.pm
+SHA1 835a91bc04131c1919bed6844dc9761619f50200 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJRui/ZAAoJEBa/9Pad787EfMcH/jhdUnvGJF5ih2y46TUvtV8+
-Fd0t6ozcVCNE/3oXlx9hEt97oRvIkT0CmzKoixx8iqUMWEJzaX+zIwSM9y/v/9xA
-Iw9Jnl7Q8FYylic9zfCNkK0UzNvRt48tpxd9Ba/98X3dowgYD3eJPOECZGpfAZkb
-kwIRziG2JsnJ9x7pEiDLUooxza7NvKb9PS/uATDP2+xdifWLeBf/h4Rmae6okF6V
-z2zKb5w3b3YfDsFjx6h7+0UTlLmGkfNAqnIZEGd0pzXkI1Wb/RAtuRrzbyT/JRma
-6840ve41rJB8/K/XCP8AIBu/Zm8Owt10gxFFoH+N+5lvsul+azGLErnc3ps8P00=
-=jl85
+iQEcBAEBAgAGBQJRvk7sAAoJEBa/9Pad787EpfIIAMaogke1sZTaWonXPrHQCIqP
+R/DP5ZOkeJb4fmD8M8/7ZnQup8fqaDt/96IVDxxUNv8dX665zIjUYfBLKhuUdPrb
+ToIqmRPSFb4EkeVUaMWflRzr7EN9ewTeNRHJFDyyZUG6lNUoYCFi9zwa9aSxWpn3
+EYa8hibYj8/8IkCKFm6eVpggVY1Jl7IYqxb6MgMfCxCaV+UaFSXoPprAS+OKCQTV
+ZtNpdGnLIiE61u67rTZvkVOn4pZ/hjXgzcj3WstGdfUV7oIpdYin66d7+OMV7gf4
+UBOTPKsOdst32uP0F1WDSYKPBgfnCkkqN+RTdO3zXAt2H+55kxX+HRnKgo2gUqs=
+=X7+9
 -----END PGP SIGNATURE-----
